# TuningAgent

./: .gitignore  CLAUDE.md  CLEANUP_REPORT.md  README.md  README_CN.md  pyproject.toml
docs/: agent-interview-qa.md  python-interview-qa.md  terminal-bench-datasets-quick-cn.md  terminal-bench-evaluation-guide-cn.md
examples/: 01_basic_tools.py  02_simple_agent.py
tests/: test_agent.py  test_bash_tool.py  test_bedrock_client.py  test_cli_e2e.py  test_health_check.py  test_logger.py  test_memory_tool.py  test_mode.py  test_model_pool.py  test_note_tool.py  test_rewind.py  test_skill_loader.py  test_skill_tool.py  test_subagent.py  test_terminal_bench.py
tuningagent/: __init__.py  agent.py  cli.py  config.py  logger.py
tuningagent/benchmark/: __init__.py  terminal_bench.py  terminal_bench_agent.py
tuningagent/config/: config-example.yaml  system_prompt.md
tuningagent/config/subagents/code-explorer/: SUBAGENT.yaml
tuningagent/config/subagents/log-explorer/: SUBAGENT.yaml
tuningagent/llm/: __init__.py  anthropic_client.py  base.py  bedrock_client.py  llm_wrapper.py  model_pool.py  openai_client.py
tuningagent/schema/: __init__.py  schema.py
tuningagent/tools/: __init__.py  file_tools.py  memory_tool.py  mode_tool.py  skill_loader.py  skill_tool.py  subagent_loader.py  subagent_tool.py
